--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,19 @@
 
 /* When the input field gets focus, change its width to 100% */
 input[type=text]:focus {
-    width: 50%;
-}
-
-
-html, body {
-    margin: 0px;
     width: 100%;
-    height: 100%;
 }
-#appcontent {
-    width: 20%;
-    height: 100%;
-    background-color: #ffe6e6;
-}
+
+
+/* Always set the map height explicitly to define the size of the div
+ * element that contains the map. */
 #map {
-    position: absolute;
-    top: 0%;
-    left: 20%;
-    right: 0%;
-    bottom: 0%;
+  height: 100%;
 }
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
