--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 .input[type=text] {
-    width: 130px;
+    width: 50px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
 
 /* When the input field gets focus, change its width to 100% */
 input[type=text]:focus {
-    width: 100%;
+    width: 50%;
 }
 
 
@@ -20,5 +20,24 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: rgb(128,128,128); 
+
 }
 
+.container {
+	height: 100%;
+	padding-left: 0;
+    padding-right: 0;
+    background-color: linen;
+}
+.row {
+	height: 100%;
+}
+
+.col-sm-10 {
+	height: 100%;
+}
+
+body {
+    background-image: url("paper.gif");
+}
