--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ input[type=text]:focus {
  * element that contains the map. */
 #map {
   height: 100%;
+  background-color: red;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
