--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
-.input[type=text] {
-    width: 50px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-/* When the input field gets focus, change its width to 100% */
-input[type=text]:focus {
-    width: 50%;
-}
-
 
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
@@ -20,7 +9,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: rgb(128,128,128); 
+  background-color: linen;
 
 }
 
@@ -36,4 +25,8 @@ html, body {
 
 .col-sm-10 {
 	height: 100%;
+}
+
+#nytimes-articles {
+  height: 50%;
 }
