--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
-
-/* Always set the map height explicitly to define the size of the div
- * element that contains the map. */
 #map {
   height: 100%;
 }
-/* Optional: Makes the sample page fill the window. */
+
 html, body {
   height: 100%;
   margin: 0;
@@ -15,7 +12,7 @@ html, body {
 
 .container {
 	height: 100%;
-	padding-left: 0;
+	padding-left: 20px;
     padding-right: 0;
     background-color: linen;
 }
